@@ -1,5 +1,6 @@
 openmediavault (6.0.33-1) stable; urgency=low
 
+  * Issue #1364: Display shared folder name in ACL page.
   * Issue #1366: increase the accuracy of the search for existing
     mount points.
 
